--- a/app/css/style.css
+++ b/app/css/style.css
@@ -51,3 +51,19 @@ body {
   left: 0.3%;
   color: #e9e9e9;
 }
+
+.info h4 {
+  font-family: "Lobster", cursive;
+  font-weight: bold;
+  font-size: 35px;
+  color: #2cc670;
+  margin-bottom: 0px;
+  margin-top: 2%;
+}
+.info p {
+  font-size: 17px;
+}
+.info {
+  text-align: center;
+}
+
