--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,69 +1,80 @@
 @import url("https://fonts.googleapis.com/css?family=Lobster");
+@import url('https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@1,300&family=Saira:wght@200&display=swap');
 body {
-  margin: 0;
-  padding: 0;
-  background-color: #2b2b2b;
-  color: #e9e9e9;
-  font-family: Noto Sans;
+    margin: 0;
+    padding: 0;
+    background-color: #2b2b2b;
+    color: #e9e9e9;
+    font-family: 'DM Mono', monospace;
+    font-family: 'Saira', sans-serif;
 }
 
 .content {
-  margin-left: 16%;
-  height: 100vh;
-  overflow: auto;
+    margin-left: 16%;
+    height: 100vh;
+    overflow: auto;
 }
 
 .logo {
-  text-align: center;
-  color: #2cc670;
-  position: relative;
-  padding: 15px 35px;
-  font-family: "Lobster", cursive;
-  font-size: 16px;
+    text-align: center;
+    color: #2cc670;
+    position: relative;
+    padding: 15px 35px;
+    font-family: "Lobster", cursive;
+    font-size: 16px;
 }
+
 
 /* width */
+
 ::-webkit-scrollbar {
-  width: 10px;
+    width: 10px;
 }
+
 
 /* Track */
+
 ::-webkit-scrollbar-track {
-  background-color: #2b2b2b;
+    background-color: #2b2b2b;
 }
+
 
 /* Handle */
+
 ::-webkit-scrollbar-thumb {
-  border-radius: 25px;
-  background: #888;
+    border-radius: 25px;
+    background: #888;
 }
 
+
 /* Handle on hover */
+
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+    background: #555;
 }
 
 .author {
-  position: fixed;
-  z-index: 1000;
-  color: red;
-  bottom: 0.1%;
-  left: 0.3%;
-  color: #e9e9e9;
+    position: fixed;
+    z-index: 1000;
+    color: red;
+    bottom: 0.1%;
+    left: 0.3%;
+    color: #e9e9e9;
 }
 
 .info h4 {
-  font-family: "Lobster", cursive;
-  font-weight: bold;
-  font-size: 35px;
-  color: #2cc670;
-  margin-bottom: 0px;
-  margin-top: 2%;
-}
-.info p {
-  font-size: 17px;
-}
-.info {
-  text-align: center;
+    font-family: "Lobster", cursive;
+    font-weight: bold;
+    font-size: 35px;
+    color: #2cc670;
+    margin-bottom: 0px;
+    margin-top: 2%;
 }
 
+.info p {
+    font-size: 17px;
+}
+
+.info {
+    text-align: center;
+}
